<resources>
    <string name="app_name">Playlist Maker</string>

    <!--MainActivity-->
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <!--/MainActivity-->

    <!--SettingsActivity-->
    <string name="dark_theme">Темная тема</string>
    <string name="share_activity">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <!--getString()-->
    <string name="course_android_developer">"https://practicum.yandex.ru/android-developer/"</string>
    <string name="mail_message">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="mail_subject">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="practicum_offer">"https://yandex.ru/legal/practicum_offer/"</string>
    <!--/getString()-->

    <!--/SettingsActivity-->

    <!--SearchingActivity-->
    <string name="input_hint">Поиск</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="bad_connection">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="server_error">На сервере произошла ошибка</string>
    <string name="update">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <!--/SearchActivity-->

    <!--PlayerActivity-->
    <string name="initial_time">00:00</string>
    <string name="unknown">n/a</string>
    <!--/PlayerActivity-->


    <!--Medialibrary-->
    <string name="media_library">Медиатека</string>
    <string name="empty_medialibrary">Ваша медиатека пуста</string>
    <string name="not_create_playlist">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favourites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <!--/Medialibrary-->


    <!--Player screen-->
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <!--/Player screen-->


    <!--New playlist fragment-->
    <string name="new_playlist_new_playlist_screen">Новый плейлист</string>
    <string name="name_hint">Название*</string>
    <string name="description_hint">Описание</string>
    <string name="text_for_button">Создать</string>
    <string name="add_playlist">Добавлен новый плейлист</string>
    <string name="complete_playlist">Завершить задание плейлиста</string>
    <string name="data_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="track_already_added">Трек уже добавлен в плейлист</string>
    <string name="track_added">Добавлено в плейлист</string>
    <!--/New playlist fragment-->

    <!--PlaylistInfoFragment-->

    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_track_message">Хотите удалить трек?</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">OK</string>
    <string name="share_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist_ask">Хотите удалить плейлист?</string>

    <!--/PlaylistInfoFragment-->

    <!--EditPlaylistFragment-->

    <string name="edit_current_playlist">Редактировать</string>
    <string name="save_button_edit">Сохранить</string>

    <!--/EditPlaylistFragment-->

</resources>