<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main_activity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/playListMakerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium_regular"
        android:text="@string/app_name"
        android:textSize="@dimen/large_font_size"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/searchButton"
        style="@style/MainActivityButtonStyle"
        android:text="@string/search"
        app:icon="@drawable/search_vector"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="@dimen/layout_margin_horizontal"/>

    <Button
        android:id="@+id/mediaLibraryButton"
        style="@style/MainActivityButtonStyle"
        android:text="@string/media_library"
        app:icon="@drawable/media_library_vector"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="@dimen/layout_margin_horizontal"/>

    <Button
        android:id="@+id/settingsButton"
        style="@style/MainActivityButtonStyle"
        android:text="@string/settings"
        app:icon="@drawable/settings_vector"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
        android:layout_marginBottom="28dp"/>

</LinearLayout>