<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp">


        <ImageView
            android:id="@+id/backArrowImageView"
            style="@style/SettingsActivityImageViewToolbarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/arrow_settings_vector"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:foreground="?attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/settingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_marginTop="14dp"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/large_font_size"/>
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/layout_height_for_framelayout"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/chooseThemeTextView"
            style="@style/SettingsActivityTextViewStyle"
            android:text="@string/dark_theme"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchThemeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="4dp"/>
        <!--В Figma нет информации о том, какого цвета должен быть Switch в положении On,
        поэтому оставил пока так как есть, в дальнейшем добавлю-->

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/layout_height_for_framelayout">

        <TextView
            android:id="@+id/shareAppTextView"
            style="@style/SettingsActivityTextViewStyle"
            android:text="@string/share_activity"/>

        <ImageView
            android:id="@+id/shareAppImageView"
            style="@style/SettingsActivityImageViewStyle"
            app:srcCompat="@drawable/share_vector" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/layout_height_for_framelayout">

        <TextView
            android:id="@+id/writeToSupportTextView"
            style="@style/SettingsActivityTextViewStyle"
            android:text="@string/write_to_support"/>

        <ImageView
            android:id="@+id/writeToSupportImageView"
            style="@style/SettingsActivityImageViewStyle"
            app:srcCompat="@drawable/support_vector"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/layout_height_for_framelayout">

        <TextView
            android:id="@+id/userAgreementTextView"
            style="@style/SettingsActivityTextViewStyle"
            android:text="@string/user_agreement"/>

        <ImageView
            android:id="@+id/userAgreementImageView"
            style="@style/SettingsActivityImageViewStyle"
            app:srcCompat="@drawable/angle_vector"/>
    </FrameLayout>

</LinearLayout>