<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <ImageView
            android:id="@+id/backArrowImageView"
            style="@style/ImageViewToolbarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/arrow_settings_vector"/>

        <TextView
            android:id="@+id/settingsTextView"
            style="@style/TextViewToolbarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"/>

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        style="@style/SettingsActivityFrameLayoutButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top_24dp">

        <TextView
            android:id="@+id/chooseThemeTextView"
            style="@style/SettingsActivityTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/SettingsActivitySwitchStyle"
            android:id="@+id/themeSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/layout_margin_end_for_switch"/>
        <!--В Figma нет информации о том, какого цвета должен быть Switch в положении On,
        поэтому оставил пока так как есть, в дальнейшем добавлю-->

    </FrameLayout>

    <FrameLayout
        android:id="@+id/shareAppFrameLayout"
        style="@style/SettingsActivityFrameLayoutButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/shareAppTextView"
            style="@style/SettingsActivityTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_activity"/>

        <ImageView
            android:id="@+id/shareAppImageView"
            style="@style/ActivityImageViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/layout_margin_end_16dp"
            app:srcCompat="@drawable/share_vector" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/supportFrameLayout"
        style="@style/SettingsActivityFrameLayoutButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/writeToSupportTextView"
            style="@style/SettingsActivityTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_to_support"/>

        <ImageView
            android:id="@+id/writeToSupportImageView"
            style="@style/ActivityImageViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/layout_margin_end_16dp"
            app:srcCompat="@drawable/support_vector"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/agreementFrameLayout"
        style="@style/SettingsActivityFrameLayoutButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/userAgreementTextView"
            style="@style/SettingsActivityTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"/>

        <ImageView
            android:id="@+id/userAgreementImageView"
            style="@style/ActivityImageViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/layout_margin_end_16dp"
            app:srcCompat="@drawable/angle_vector"/>
    </FrameLayout>

</LinearLayout>